--- a/index.html
+++ b/index.html
@@ -166,7 +166,8 @@
 
     <!-- Các ô chức năng -->
   <div class="boxes">
-    <a href="https://vunganghatinh.gov.vn/tin-tuc
+    <div class="boxes">
+    <a href="https://vunganghatinh.gov.vn/tin-tuc"
        class="box"
        target="_blank"
        rel="noopener noreferrer"
@@ -183,6 +184,7 @@
 
     </a>
 </div>
+
 
 
        <a href="#muc1" class="box" style="background: linear-gradient(135deg, #8e24aa, #ab47bc);">
