--- a/index.html
+++ b/index.html
@@ -166,27 +166,16 @@
 
     <!-- Các ô chức năng -->
   <div class="boxes">
-    <div class="boxes">
-    <a href="https://vunganghatinh.gov.vn/tin-tuc"
-       class="box"
-       target="_blank"
-       rel="noopener noreferrer"
-       style="background: linear-gradient(135deg, #42a5f5, #64b5f6);">
-
+    <a href="#muc2" class="box" style="background: linear-gradient(135deg, #42a5f5, #64b5f6);">
         <div class="box-content" style="text-align:center;">
-            <span class="material-icons"
-                  style="font-size:80px; color:#fff; margin-bottom:10px; display:block;">
+            <span class="material-icons" style="font-size:80px; color:#fff; margin-bottom:10px; display:block;">
                 article
             </span>
             <h3 style="color:#fff;">TIN TỨC</h3>
             <p style="color:#fff;">Thông tin mới nhất</p>
         </div>
-
     </a>
 </div>
-
-
-
        <a href="#muc1" class="box" style="background: linear-gradient(135deg, #8e24aa, #ab47bc);">
     <div class="box-content" style="text-align:center;">
         <span class="material-icons" style="font-size:80px; color:#fff; margin-bottom:10px; display:block;">person</span>
